--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Header Section -->
         <header class="header">
             <div class="profile-img">
-                <img src="https://scontent.fpnh10-1.fna.fbcdn.net/v/t39.30808-6/503284616_1279587460838872_1590011503250838051_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeFBLVkAQ-rQwI1t2VaIkbZ-IRuk-f8ps70hG6T5_ymzvRDP67gsWFu_DspDMnsGf1aPIq573OIhor2bosRNlESn&_nc_ohc=gZGGA2Ks1LEQ7kNvwEc3w9j&_nc_oc=AdkFwq_kzs-bFn2rGvjQfpcZksv2mytHevOC7OnTjeAnHniAFKMzeixFCBoSq2xYMEQ&_nc_zt=23&_nc_ht=scontent.fpnh10-1.fna&_nc_gid=mJt-GB0QZZtyDsQdRycsYg&oh=00_AfXzhbEGxGcthY5qPU5NYmlnFwPpJfN5GLt-YGP5XEYHLg&oe=68B0C6BE" alt="YCNTomie LaCima">
+                <img src="Tomie.png" alt="YCNTomie LaCima">
             </div>
             <h1 style="color: white;" class="artist-name">YCNTomie LaCima</h1>
         </header>
@@ -128,4 +128,5 @@
         });
     </script>
 </body>
+
 </html>
